--- a/index.html
+++ b/index.html
@@ -459,7 +459,8 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="images/java.png" width="200" height="200" style="display: block; margin: 0 auto;" alt="Java Image">
+                <img src="images/java.png" width="200" height="200" style="display: block; margin: 0 auto;"
+                  alt="Java Image">
                 <div class="portfolio-info">
                   <h4>Java</h4>
                   <p>Java Mastery : Step by Step</p>
@@ -472,7 +473,8 @@
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Python">
               <div class="portfolio-content h-100">
-               <img src="images/python playlist.png" width="200" height="200" style="display: block; margin: 0 auto;" alt="Python Playlist">
+                <img src="images/python playlist.png" width="200" height="200" style="display: block; margin: 0 auto;"
+                  alt="Python Playlist">
                 <div class="portfolio-info">
                   <h4>Python</h4>
                   <p>Python Mastery : Zero to Legend</p>
@@ -485,7 +487,8 @@
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Linux">
               <div class="portfolio-content h-100">
-                <img src="images/linux.png" width="200" height="200" style="display: block; margin: 0 auto;" alt="Linux Playlist">
+                <img src="images/linux.png" width="200" height="200" style="display: block; margin: 0 auto;"
+                  alt="Linux Playlist">
                 <div class="portfolio-info">
                   <h4>Linux</h4>
                   <p>Linux : From Zero to Shell Hero</p>
@@ -681,7 +684,9 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Shiva is knowledgeable and commited individual. He is a great software assurance tester and automation engineer. His communication is straightforward, honest and respectful. To sum it up, I experienced Shiva to be an outstanding co-worker.</span>
+                  <span>Shiva is knowledgeable and commited individual. He is a great software assurance tester and
+                    automation engineer. His communication is straightforward, honest and respectful. To sum it up, I
+                    experienced Shiva to be an outstanding co-worker.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
@@ -694,7 +699,12 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>I am really fortunate to work with shiva.He is very good in Automation and coming to our team it’s very tough to automate our application but still he took a great initiative and with all his research he came up with one good automation tool. This is really a big add-on to our project. With in short time he marvellously showed his skills in automating things and helped in our project releases on time.Add on to this he is a great team player and also a good teacher is hided in him. He always works smart and adds his valuable points to the team.</span>
+                  <span>I am really fortunate to work with shiva.He is very good in Automation and coming to our team
+                    it’s very tough to automate our application but still he took a great initiative and with all his
+                    research he came up with one good automation tool. This is really a big add-on to our project. With
+                    in short time he marvellously showed his skills in automating things and helped in our project
+                    releases on time.Add on to this he is a great team player and also a good teacher is hided in him.
+                    He always works smart and adds his valuable points to the team.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/valli.jpg" class="testimonial-img" alt="">
@@ -707,7 +717,9 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>I worked closely with Shiva in the same team during my tenure in NCR. Shiva is very composed, quick learner and having very good communication skills. He introduced new tools to our team which added a good value. He has very good command in all the latest testing tools.</span>
+                  <span>I worked closely with Shiva in the same team during my tenure in NCR. Shiva is very composed,
+                    quick learner and having very good communication skills. He introduced new tools to our team which
+                    added a good value. He has very good command in all the latest testing tools.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/Sudheer.jpg" class="testimonial-img" alt="">
@@ -721,10 +733,11 @@
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
                   <span>It’s rare that you come across standout talent like Shiva.
-I first became acquainted with him in 2017, when I joined ORACLE.
-He has a broad range of skills. Since the beginning of our collaboration I know him as intelligent, hard-working and outgoing person, which consistently produced high quality work in a timely fashion.
-I enthusiastically recommend Shiva as a promising person..
-Ridiculously efficient’ is the phrase that comes to mind when I think about Shiva..</span>
+                    I first became acquainted with him in 2017, when I joined ORACLE.
+                    He has a broad range of skills. Since the beginning of our collaboration I know him as intelligent,
+                    hard-working and outgoing person, which consistently produced high quality work in a timely fashion.
+                    I enthusiastically recommend Shiva as a promising person..
+                    Ridiculously efficient’ is the phrase that comes to mind when I think about Shiva..</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/Mahesh.jpg" class="testimonial-img" alt="">
@@ -737,7 +750,12 @@ Ridiculously efficient’ is the phrase that comes to mind when I think about Sh
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Shiva is one of the brightest and yet so humble technical persons I have worked with. A quick learner, Shiva never panics and helps his team to achieve best. Shiva was key resource in the suite8 automation team with equally good functional knowledge. He always responded to team’s ad hoc requests with persistence. He falls in the category of very few straight forward individuals who are not reluctant to call an ace an ace. He adds a lot of value to the team and can step-up to key roles in short span of time.I would definitely want to have him in my team again.</span>
+                  <span>Shiva is one of the brightest and yet so humble technical persons I have worked with. A quick
+                    learner, Shiva never panics and helps his team to achieve best. Shiva was key resource in the suite8
+                    automation team with equally good functional knowledge. He always responded to team’s ad hoc
+                    requests with persistence. He falls in the category of very few straight forward individuals who are
+                    not reluctant to call an ace an ace. He adds a lot of value to the team and can step-up to key roles
+                    in short span of time.I would definitely want to have him in my team again.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/Shashank.jpg" class="testimonial-img" alt="">
@@ -745,11 +763,12 @@ Ridiculously efficient’ is the phrase that comes to mind when I think about Sh
                 <h4>Product Manager</h4>
               </div>
             </div><!-- End testimonial item -->
-             <div class="swiper-slide">
+            <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>I feel privilege to work along with Shiva .He is extremely talented in Selenium automation testing. He is so dedicated and hard working to achieve what he wanted. </span>
+                  <span>I feel privilege to work along with Shiva .He is extremely talented in Selenium automation
+                    testing. He is so dedicated and hard working to achieve what he wanted. </span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/vinod.jpg" class="testimonial-img" alt="">
@@ -757,11 +776,13 @@ Ridiculously efficient’ is the phrase that comes to mind when I think about Sh
                 <h4>Application Development Lead</h4>
               </div>
             </div><!-- End testimonial item -->
-             <div class="swiper-slide">
+            <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>shiva is an automation genius. He has outstanding knowledge on automation and testing. He is a professional, helpful, and positive person. It is a pleasure and honor to recommend shiva to anyone who wants to hire him.</span>
+                  <span>shiva is an automation genius. He has outstanding knowledge on automation and testing. He is a
+                    professional, helpful, and positive person. It is a pleasure and honor to recommend shiva to anyone
+                    who wants to hire him.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/Bala.jpg" class="testimonial-img" alt="">
@@ -821,9 +842,16 @@ Ridiculously efficient’ is the phrase that comes to mind when I think about Sh
               </div><!-- End Info Item -->
 
               <iframe
-                src="https://www.google.com/maps/place/Hari+Hara+Hills/@17.5214218,78.3857483,17z/data=!3m1!4b1!4m6!3m5!1s0x3bcb8f86a4c157c7:0xcb45a223867bfbcd!8m2!3d17.5214218!4d78.3857483!16s%2Fg%2F11sh738yhz?entry=ttu&g_ep=EgoyMDI1MDUyOC4wIKXMDSoASAFQAw%3D%3D"
-                frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                src="https://www.google.com/maps/place/Hari+Hara+Hills/@17.5214218,78.3857483,17z/data=!3m1!4b1!4m6!3m5!1s0x3bcb8f86a4c157c7:0xcb45a223867bfbcd!8m2!3d17.5214218!4d78.3857483!16s%2Fg%2F11sh738yhz?entry=ttu"
+                frameborder="0" style="
+        border: 0;
+        width: 100%;
+        height: 270px;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    " allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
+
             </div>
           </div>
 
