--- a/index.html
+++ b/index.html
@@ -890,6 +890,36 @@
 
               </div>
             </form>
+            
+            <script>
+              document.getElementById("contact-form").addEventListener("submit", function (event) {
+                event.preventDefault(); // Prevent default form submission
+                const form = this;
+                const formData = new FormData(form);
+
+                // Get the success message element
+                const successMessage = document.querySelector(".sent-message");
+                successMessage.style.display = "none"; // Hide success message initially
+
+                fetch(form.action, {
+                  method: "POST",
+                  body: formData,
+                  headers: { "Accept": "application/json" }
+                })
+                  .then(response => response.json())
+                  .then(data => {
+                    if (data.ok) {
+                      form.reset(); // Clear form fields
+                      successMessage.style.display = "block"; // Show success message
+                    } else {
+                      console.error("Form submission failed:", data);
+                    }
+                  })
+                  .catch(error => {
+                    console.error("Something went wrong with form submission.", error);
+                  });
+              });
+            </script>
           </div><!-- End Contact Form -->
 
         </div>
