--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up"
+            <form action="https://formspree.io/f/xgvojdyy" method="post" class="php-email-form" data-aos="fade-up"
               data-aos-delay="200">
               <div class="row gy-4">
 
@@ -890,7 +890,7 @@
 
               </div>
             </form>
-            
+
             <script>
               document.getElementById("contact-form").addEventListener("submit", function (event) {
                 event.preventDefault(); // Prevent default form submission
