--- a/index.html
+++ b/index.html
@@ -925,21 +925,31 @@
   </main>
 
   <footer id="footer" class="footer position-relative light-background">
-
     <div class="container">
-      <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span>
-        </p>
+      <h3 class="sitename">Shiva Krishna Duppalli</h3>
+      <p>Your friendly neighbourhood automation and cloud specialist!</p>
+      <div class="social-links d-flex justify-content-center">
+        <a href="https://www.youtube.com/@shivatechhub" class="youtube"><i class="bi bi-youtube"></i></a>
+        <a href="https://www.facebook.com/shivachamp1210" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/shiva_krishna316/" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/shiva-krishna-duppalli-453230b8/" class="linkedin"><i
+            class="bi bi-linkedin"></i></a>
       </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a
-          href="https://themewagon.com">ThemeWagon</a>
+
+      <div class="container">
+        <div class="copyright text-center ">
+          <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span>
+          </p>
+        </div>
+        <div class="credits">
+          <!-- All the links in the footer should remain intact. -->
+          <!-- You can delete the links only if you've purchased the pro version. -->
+          <!-- Licensing information: https://bootstrapmade.com/license/ -->
+          <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a
+            href="https://themewagon.com">ThemeWagon</a>
+        </div>
       </div>
-    </div>
 
   </footer>
 
