--- a/index.html
+++ b/index.html
@@ -924,11 +924,11 @@
 
   </main>
 
-  <footer id="footer" class="footer position-relative light-background">
+  <footer id="footer" class="footer position-relative light-background text-center">
     <div class="container">
       <h3 class="sitename">Shiva Krishna Duppalli</h3>
       <p>Your friendly neighbourhood automation and cloud specialist!</p>
-      <div class="social-links d-flex justify-content-center">
+      <div class="social-links d-flex justify-content-center align-items-center gap-3 mt-3">
         <a href="https://www.youtube.com/@shivatechhub" class="youtube"><i class="bi bi-youtube"></i></a>
         <a href="https://www.facebook.com/shivachamp1210" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/shiva_krishna316/" class="instagram"><i class="bi bi-instagram"></i></a>
