--- a/index.html
+++ b/index.html
@@ -842,15 +842,9 @@
               </div><!-- End Info Item -->
 
               <iframe
-                src="https://www.google.com/maps/place/Hari+Hara+Hills/@17.5214218,78.3857483,17z/data=!3m1!4b1!4m6!3m5!1s0x3bcb8f86a4c157c7:0xcb45a223867bfbcd!8m2!3d17.5214218!4d78.3857483!16s%2Fg%2F11sh738yhz?entry=ttu"
-                frameborder="0" style="
-        border: 0;
-        width: 100%;
-        height: 270px;
-        border-radius: 12px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    " allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-              </iframe>
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3804.7084217123484!2d78.38317337572418!3d17.5214268989288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb8f86a4c157c7%3A0xcb45a223867bfbcd!2sHari%20Hara%20Hills!5e0!3m2!1sen!2sin!4v1748781745091!5m2!1sen!2sin"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
 
             </div>
           </div>
