--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form id="contact-form" action="https://formspree.io/f/xgvojdyy" method="POST" class="php-email-form"
+            <form id="contact-form" action="https://formspree.io/f/xldnryay" method="POST" class="php-email-form"
               data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
                 <div class="col-md-6">
